@@ -85,12 +85,48 @@ void OptionRepositoryTest::testOptionAccess()
    has_opt = opts.hasOption("opt1/opt1_1/opt1_1_1/value");
    CPPUNIT_ASSERT(has_opt);
 
+   // Test getting an attribute off the root
+   int_val = opts.getValue<int>("root_attrib");
+   CPPUNIT_ASSERT(21 == int_val);
+
+   // Test getting string option with spaces in it
+   str_val = opts.getValue<std::string>("option_2/stringval");
+   CPPUNIT_ASSERT(std::string("string value") == str_val);
+
    // Test getting nodes manually
    cppdom::NodePtr filelist_node = opts.optionsNode()->getChild("filelist");
    cppdom::NodeList file_nodes = filelist_node->getChildren("file");
    CPPUNIT_ASSERT(file_nodes.size() == 3);
 
 
+}
+
+void OptionRepositoryTest::testOptionSetting()
+{
+   cppdom::OptionRepository opts;
+   opts.loadOptionsFile(cppdomtest::optionstest_xml_filename);    // Load the options
+
+   // Test getting and setting a known value
+   int int_val = opts.getValue<int>("option_1/intval");
+   CPPUNIT_ASSERT(1 == int_val);
+
+   opts.setValue("option_1/intval", 21);
+   int_val = opts.getValue<int>("option_1/intval");
+   CPPUNIT_ASSERT(21 == int_val);
+
+   // Test setting a value that is not set yet
+   CPPUNIT_ASSERT(opts.hasOption("test_set_option/intval") == false);
+   opts.setValue("test_set_option/intval", 12);
+   CPPUNIT_ASSERT(opts.hasOption("test_set_option/intval") == true);
+   int_val = opts.getValue<int>("test_set_option/intval");
+   CPPUNIT_ASSERT(12 == int_val);
+
+   // Test setting an option that is attrib off the root
+   CPPUNIT_ASSERT(opts.hasOption("test_set_root") == false);
+   opts.setValue("test_set_root", "test string");
+   CPPUNIT_ASSERT(opts.hasOption("test_set_root") == true);
+   std::string str_val = opts.getValue<std::string>("test_set_root");
+   CPPUNIT_ASSERT(std::string("test string") == str_val);
 }
 
 
